--- a/default.conf
+++ b/default.conf
@@ -1,21 +1,21 @@
 server {
-    listen 85;
+    listen 80;
     server_name localhost;
 
     location /api1 {
-        proxy_pass http://api1_container:8001;
+        proxy_pass http://api1_container;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
     }
 
     location /api2 {
-        proxy_pass http://api2_container:8002;
+        proxy_pass http://api2_container;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
     }
 
     location /api3 {
-        proxy_pass http://api3_container:8003;
+        proxy_pass http://api3_container;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
     }
