--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ services:
   nginx:
     image: nginx
     ports:
-      - 85:85
+      - 80:80
     volumes:
       - ./default.conf:/etc/nginx/conf.d/default.conf
     depends_on:
@@ -12,16 +12,19 @@ services:
       - api3_container
 
   api1_container:
-    image: api1_image
+    build:
+      context: ./api1
     ports:
-      - 8001:8001
+      - 8081:80
 
   api2_container:
-    image: api2_image
+    build:
+      context: ./api2
     ports:
-      - 8002:8002
+      - 8082:80
 
   api3_container:
-    image: api3_image
+    build:
+      context: ./api1
     ports:
-      - 8003:8003
+      - 8083:80
